--- a/templates/search.html
+++ b/templates/search.html
@@ -4,9 +4,9 @@
 <h1>Search</h1>
 
 {% if 'access_token' in session %}
-<span id="hasToken" class="token-indicator has-token">You are connected to Spotify! You may now search for tracks and hear them.</span>
+<span id="hasToken" class="token-indicator has-token">You're connected! You may search and hear tracks!</span>
 {% else %}
-<a href="/auth" id="hasToken" class="token-indicator">Before you can search, you must connect to Spotify. Click here to do so!</a>
+<a href="/auth" id="hasToken" class="token-indicator">You must connect to Spotify. Click here to do so!</a>
 {% endif %}
 <div id="searchWrapper">
     <div class="search-type">
