--- a/templates/tag.html
+++ b/templates/tag.html
@@ -13,6 +13,7 @@
         {% if recording.spotify_uri %}
         <iframe src="https://open.spotify.com/embed/track/{{recording.spotify_uri}}" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
         {% endif %}
+        <a href="/user/add-recording/{{recording.mbid}}/{{recording.spotify_uri}}" class="btn btn-sm btn-outline-dark">Add song to library</a>
     </div>
     {% endfor %}
 </div>
