--- a/templates/home.html
+++ b/templates/home.html
@@ -5,14 +5,17 @@
     <div class="home-page-info">
         <h1 class="main-title">Welcome to Musophile!</h1>
         <h4>Where music heads join heads...</h4>
-        
+        {% if g.user %}
+        <div class="call-to-action">
+            <a href="/search" class="btn btn-lg">Search for music!</a>
+        {% else %}
         <div class="call-to-action">
             <a href="/register" class="btn btn-lg">Click here to sign up!</a>
         </div>
         <a href="/login" class="btn btn-sm">Login</a>
+        </div>
+        {% endif %}
     </div>
 </div>
 
 {% endblock %}
-
-https://accounts.spotify.com/authorize/?client_id=8e4449a65fb344aeb490c427582da2e7&response_type=code&redirect_uri=http://localhost:5000/callback&scope=streaming
