fixed reauth and edited for deployment

--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <div class="home-page">
     <div class="home-page-info">
         <h1 class="main-title">Welcome to Musophile!</h1>
-        <h4>Where music heads join heads...</h4>
+        <h4>Where music heads join heads!</h4>
         {% if g.user %}
         <div class="call-to-action">
             <a href="/search" class="btn btn-lg">Search for music!</a>
